--- a/eq-lightning/index.html
+++ b/eq-lightning/index.html
@@ -234,12 +234,12 @@
 <!-- ═══ ASSEMBLY PATTERN BAR ═══ -->
 <div class="eq-sm-assembly" role="navigation" aria-label="Assembly Pattern">
     <span class="eq-sm-assembly-title">Assembly Pattern</span>
-    <span class="eq-sm-col-chip left">Left: Related Lists</span>
+    <span class="eq-sm-col-chip left" title="300px — Child objects, lookup relationships, Agentforce actions">Left (300px): Related Lists</span>
     <span class="eq-sm-col-arrow">|</span>
-    <span class="eq-sm-col-chip center">Center: Record Details</span>
+    <span class="eq-sm-col-chip center" title="1fr — Primary record fields organized by section, matching Page Layout in Setup">Center (1fr): Record Details</span>
     <span class="eq-sm-col-arrow">|</span>
-    <span class="eq-sm-col-chip right">Right: Activity (tabbed)</span>
-    <span class="eq-sm-path-note">Path above columns. Agentforce in right-column tabs.</span>
+    <span class="eq-sm-col-chip right" title="340px — Tabbed: Activity Timeline, Chatter, Agentforce">Right (340px): Activity (tabbed)</span>
+    <span class="eq-sm-path-note">Path spans full width above columns. Agentforce in right-column tabs.</span>
 </div>
 
 <main id="main-content">
